tests/ui/recursion.stderr
error: Indirect left recursion detected (unsupported): a -> b -> a
 --> tests/ui/recursion.rs:6:14
  |
6 |         rule a -> () = b -> { () }
  |              ^
